# telegram-delete-all-messages

./: .gitignore  README.md  pyproject.toml  requirements.txt  telegram-message-cleaner.py
sessions/: README.md
