[tool.poetry]
name = "telegram-message-cleaner"
version = "0.1.0"
description = "A CLI utility intended to be used in a live mode or as a part of a script, in order to easily delete user messages in any Telegram chat."
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "^3.9"
Pyrogram = "^1.1.13"
TgCrypto = "^1.2.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
